# ic-secure-ml

./: README.md
.github/workflows/: rust-clippy.yml
cycles-cost-tested/ic-mnist/: Cargo.toml  README.md  canbench.yml
cycles-cost-tested/ic-mnist/custom-getrandom/: Cargo.toml
cycles-cost-tested/ic-mnist/custom-getrandom/src/: lib.rs
cycles-cost-tested/ic-mnist/datasets/: Cargo.toml
cycles-cost-tested/ic-mnist/datasets/src/: dataset.rs
cycles-cost-tested/ic-mnist/src/ic_mnist_backend/: Cargo.toml  ic_mnist_backend.did
cycles-cost-tested/ic-mnist/src/ic_mnist_backend/src/: lib.rs  linfa.rs  main.rs  state.rs  train.rs
cycles-cost-tested/ic-mnist/src/ic_mnist_can1/: Cargo.toml  ic_mnist_can1.did
cycles-cost-tested/ic-mnist/src/ic_mnist_can1/src/: main.rs  web.rs
cycles-cost-tested/ic_djstorch/: dfx.json  package-lock.json  package.json  tsconfig.json
cycles-cost-tested/ic_djstorch/src/: mnist.ts  train.ts
cycles-cost-tested/ic_djstorch/src/mnist/: data.js
ic_linfa/: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
ic_linfa/.cargo/: config.toml
ic_linfa/src/ic-getrandom/: Cargo.toml
ic_linfa/src/ic-getrandom/src/: lib.rs
ic_linfa/src/ic_linfa_backend/: Cargo.toml  ic_linfa_backend.did
ic_linfa/src/ic_linfa_backend/src/: elasticnet.rs  ftrl.rs  lib.rs  trees.rs  tsne.rs
ic_linfa/src/ic_linfa_frontend/: package.json  vite.config.js  vite.config.js.timestamp-1715405718775-6203ec46ad8ae.mjs
ic_linfa/src/ic_linfa_frontend/src/: app.html
ic_linfa/src/ic_linfa_frontend/src/lib/: canisters.js  consent.svelte  data.js  levels.svelte  rating.svelte
ic_linfa/src/ic_linfa_frontend/src/routes/: +page.svelte
ic_linfa/src/ic_linfa_frontend/wasm/: Cargo.toml
ic_linfa/src/ic_linfa_frontend/wasm/src/: ftrl.rs  lib.rs  tsne.rs
ic_split-learning/: Cargo.toml  README.md  dfx.json  did.sh  package.json
ic_split-learning/ic_usl_backend/: Cargo.toml  ic_usl_backend.did
ic_split-learning/ic_usl_frontend/: package.json  vite.config.js
ic_split-learning/ic_usl_frontend/src/lib/: wasm_bg.js  wasm_bg.wasm
ic_split-learning/ic_usl_frontend/wasm/: Cargo.toml
ic_split-learning/src/ic_usl_backend/src/: lib.rs
ic_split-learning/src/ic_usl_frontend/: tsconfig.json
ic_split-learning/src/ic_usl_frontend/src/: app.html
ic_split-learning/src/ic_usl_frontend/src/lib/: canisters.js  wasm.d.ts
ic_split-learning/src/ic_usl_frontend/src/routes/: +page.svelte
ic_split-learning/src/ic_usl_frontend/static/: .ic-assets.json5
ic_split-learning/src/ic_usl_frontend/wasm/: Cargo.toml
ic_split-learning/src/ic_usl_frontend/wasm/src/: lib.rs
