[package]
name = "custom-getrandom"
version = "0.0.1"
authors = [
]
description = "handle getrandom"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
base62 = "2.0"
crc = "3.0"
derive_more = "0.99.14"
candid = "0.10.4"
ic-cdk = "0.13.1"
rand = { version = "0.8", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.3", features = ["custom"] }
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
serde = "*"