[package]
name = "ic_mnist_can1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

custom-getrandom = { path = "../../custom-getrandom" }
getrandom = { version = "0.2", features = ["custom"] }
canbench-rs = { version = "0.1.1", optional = true }
candid = "0.10.4"
ic-cdk = "0.13.1"
#burn = { git  = "https://github.com/burn-rs/burn",  default-features = false,features = ["train"] }
#burn-ndarray = { git = "https://github.com/burn-rs/burn",  default-features = false}
#burn-train = { git = "https://github.com/burn-rs/burn",  default-features = false }
#burn-dataset = { git = "https://github.com/burn-rs/burn",  default-features = false }
#burn-core = { git = "https://github.com/burn-rs/burn",  default-features = false,features = ["ndarray"] }
#burn-common = { git = "https://github.com/burn-rs/burn",  default-features = false}
serde = "*"
# wasm-bindgen = "0.2.86"

linfa="*"
linfa-tsne = "0.7.0"
linfa-reduction = "0.7.0"
thiserror = "1.0"
ndarray = { version = "0.15" }
ndarray-rand = "0.14"
bhtsne = "0.4.0"
pdqselect = "=0.1.0"
log = "0.4.21"
linfa-datasets = { version = "0.7.0", path = "../../datasets", features = ["mnist"] }
#mnist = { version = "0.6.0", features = ["download"] }