[package]
name = "wasm"
version = "0.1.0"
authors = ["Vincent B."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.84"
serde  = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ndarray = "0.15.6"

linfa = "0.7.0"
linfa-elasticnet = "0.7.0"
linfa-ftrl = "0.7.0"
linfa-reduction = "0.7.0"
linfa-tsne = "0.7.0"
csv = "1.3.0"
getrandom = { version = "0.2", features = ["js"] }
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
web-sys = { version = "0.3", features = ["console"] }
itertools = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]