[package]
name = "wasm"
version = "0.1.0"
authors = ["Vincent B."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde  = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde-ndim = {version = "1.1.0",features = ["ndarray"]}
flate2 = "1.0.30"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand_distr = "0.4.3"

getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
wasm-timer = "0.2.5"

console_error_panic_hook = { version = "0.1.7", optional = true }
num-traits = "0.2.19"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3", features = ["console"] }
[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
debug = true
[workspace]